--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "http://Vyaskumar349.github.io/Travelapp/",
-  "name": "travelapp",
+  "homepage": "https://Vyaskumar349.github.io/travel-app",
+  "name": "travelapp"
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -15,7 +15,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "predeploy": "npm run build",
+    "predeploy": "npm run build", 
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
