updated package.json 2

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://Vyaskumar349.github.io/travel-app",
-  "name": "travelapp"
+  "name": "travelapp",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
