--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Vyaskumar349.github.io/Travels-app",
+  "homepage": "http://Vyaskumar349.github.io/happytravels-app",
   "name": "travelapp",
   "version": "0.1.0",
   "private": true,
